@@ -526,6 +526,7 @@ Version 1.13.0-dev:
    * Fixed a bug in which sides without a leader, but not defeated due to 
      defeat_condition set to no_units_left or never couldn't capture villages
    * Fixed several Mac OS specific bugs in GUI.pyw
+   * Fixed bug 22987 for filtering on era and mods in the Multiplayer lobby.
 
 Version 1.11.11:
  * Add-ons server:
